Performance improvements (#106)
* Significantly reduce memory allocations in XMLParseUtil and ColorTable

This was largely done by avoiding Pattern instantiation.

Signed-off-by: Taylor Smock <tsmock@meta.com>

* Update ant version

Signed-off-by: Taylor Smock <tsmock@meta.com>

* Add parent pom

Signed-off-by: Taylor Smock <tsmock@meta.com>

* Avoid NumberCharState instantiations by (effectively) inlining it

Signed-off-by: Taylor Smock <tsmock@meta.com>

---------

Signed-off-by: Taylor Smock <tsmock@meta.com>